# OpenModelicaRunner

./: .pre-commit-config.yaml  pyproject.toml
.pre-commit/: uipy.py
omr/: __init__.py
omrun/: __init__.py  __main__.py  view.py  widget.py
omrun/ui/: mainwindow.py  mainwindow.pyi  modelbrowser.py  modelbrowser.pyi  setupdialog.py  setupdialog.pyi
omrun/widget/: __init__.py  mainwindow.py  modelbrowser.py  setupdialog.py  util.py
qasync-stubs/: __init__.pyi  _unix.pyi  _windows.pyi
ui/: mainwindow.ui  modelbrowser.ui  setupdialog.ui
