[tool.poetry]
name = "openmodelicarunner"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
packages = [
    { include = "omr" },
]

[tool.poetry.scripts]
omr = "omr:main"

[tool.poetry.dependencies]
python = "~3.10"
pyside6 = "^6"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
