[tool.poetry]
name = "openmodelicarunner"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
packages = [
    { include = "omrun" },
]

[tool.poetry.scripts]
OMRun = "omrun.__main__:main"

[tool.poetry.dependencies]
python = "~3.10"
pyside6 = "^6"
qasync = "^0.24.0"
bidict = "^0.22.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
extend-exclude = "^/omrun/ui/.*\\.py$"

[tool.flake8]
exclude = '.venv,.git,omrun/ui'
max-line-length = 100

[tool.isort]
profile = "black"
skip_glob = "omrun/ui/*.py"
line_length = 100

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
